tests/valid/binop_implicit_cast.ar
fn main()
{
    {
        let a: usize;
        let b: u8;
        let c = a + b;
    }

    {
        let a: usize;
        let b: u16;
        let c = a + b;
    }

    {
        let a: usize;
        let b: u32;
        let c = a + b;
    }

    {
        let a: usize;
        let b: u64;
        let c = a + b;
    }

    {
        let a: usize;
        let b: usize;
        let c = a + b;
    }

    {
        let a: isize;
        let b: i8;
        let c = a + b;
    }

    {
        let a: isize;
        let b: i16;
        let c = a + b;
    }

    {
        let a: isize;
        let b: i32;
        let c = a + b;
    }

    {
        let a: isize;
        let b: i64;
        let c = a + b;
    }

    {
        let a: isize;
        let b: isize;
        let c = a + b;
    }

    {
        let a = 1;
        let b = -1;
        let c = a + b;
    }
}
