tests/invalid/void_vars_and_params.ar
// errc: 2

fn main() {
    let something = {
        let a = 1;
    };
    cool(something);
}

fn cool(arg: void) {}
